samples/_failures_safe/1761485099_5e7762_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_68659370.c: In function ‘main’:
./samples/SAFE/__tmp_68659370.c:165:23: error: expected ‘;’ at end of input
  165 |     graph.edges[4].src
      |                       ^
      |                       ;
./samples/SAFE/__tmp_68659370.c:165:5: error: expected declaration or statement at end of input
  165 |     graph.edges[4].src
      |     ^~~~~
